Ui fixes on mobile
Ui fixes on mobile

--- a/app/assets/css/dash.scss
+++ b/app/assets/css/dash.scss
@@ -505,11 +505,18 @@ h3
 
           li 
           {
-            padding:10px;
-           position: relative;
-           color:#75828f;
-           font-size:16px;
-           letter-spacing: 0.8px !important;
+            padding: 10px;
+            position: relative;
+            color: #75828f;
+            align-items: center;
+            font-size: 16px;
+            display: flex;
+            vertical-align: middle;
+            letter-spacing: 0.8px !important;
+
+            @media screen and (max-width:500px) {
+                font-size: 16px;
+            }
 
            .xd-rate-box
            {
@@ -519,6 +526,10 @@ h3
             position: absolute !important;
             right:80px;
             font-size:14px;
+
+            @media screen and (max-width:500px) {
+                max-width:55px; 
+            }
 
             &:focus-visible
             {
